<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".bookdetail.BookDetailFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.mybooks.viewmodel.BookViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/book_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/black"
                app:mutableText="@{viewModel.getBookTitle()}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:text="@string/isbn"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/book_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textAppearance="?android:textAppearanceMedium"
                app:mutableText="@{viewModel.getBookIsbn()}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:text="@string/description"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:justificationMode="inter_word"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                app:mutableText="@{viewModel.getBookDescription()}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:text="@string/authors"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/book_authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                app:mutableText="@{viewModel.getBookAuthors()}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:text="@string/categories"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/book_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                app:mutableText="@{viewModel.getBookCategories()}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:text="@string/status"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/book_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                app:mutableText="@{viewModel.getBookStatus()}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:text="@string/page_count"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/book_page_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                app:mutabtleText="@{viewModel.getBookPageCount()}" />

        </LinearLayout>

    </ScrollView>

</layout>